[tool.poetry]
name = "github-actions-test"
version = "0.0.1"
description = ""
packages = [{include = "github_actions_test"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
gat = "github_actions_test.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.1"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# See list of rules at: https://docs.astral.sh/ruff/rules/
select = ["E", "F", "W", "C90"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"